--- a/pom.xml
+++ b/pom.xml
@@ -150,6 +150,14 @@
             <version>0.8</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.apache.zookeeper/zookeeper -->
+        <dependency>
+            <groupId>org.apache.zookeeper</groupId>
+            <artifactId>zookeeper</artifactId>
+            <version>3.5.6</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
